Changed to use a full MongoDB uri

--- a/.env.sample
+++ b/.env.sample
@@ -18,9 +18,7 @@ ENABLE_API=true
 API_PATH=/api/
 
 # MongoDB config
-MONGO_HOST=localhost
-MONGO_PORT=27017
-MONGO_DB=nodejs_base
+MONGO_URI=mongodb+srv://sergio:<password>@cluster0-sllnf.mongodb.net/nodejs_base?retryWrites=true&w=majority
 
 # NOT CONFIRMED CONFIG YET ------------------
 
