--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "3.0.2",
     "eslint": "6.8.0",
     "express": "4.17.1",
+    "express-http-proxy": "1.6.2",
     "express-jwt": "5.3.3",
     "express-openapi-validator": "3.11.0",
     "express-session": "1.17.0",
@@ -32,6 +33,7 @@
     "@types/compression": "1.7.0",
     "@types/cors": "2.8.6",
     "@types/express": "4.17.6",
+    "@types/express-http-proxy": "1.6.1",
     "@types/express-session": "1.17.0",
     "@types/mongodb": "3.5.5",
     "@types/mongoose": "5.7.10",
