--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,9 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
+# dotenv environment variables file
+.env
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
