--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "json-refs": "3.0.15",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.15",
+    "luxon": "1.25.0",
     "memory-cache": "0.2.0",
-    "moment": "2.24.0",
     "mongoose": "5.10.7",
     "node-ts": "5.0.5",
     "passport": "0.4.1",
@@ -41,6 +41,7 @@
     "@types/express": "4.17.6",
     "@types/express-http-proxy": "1.6.1",
     "@types/express-session": "1.17.0",
+    "@types/luxon": "1.25.0",
     "@types/mongodb": "3.5.27",
     "@types/mongoose": "5.7.36",
     "@types/node": "13.11.1",
