--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/luxon": "1.25.0",
     "@types/mongodb": "3.5.27",
     "@types/mongoose": "5.7.36",
+    "@types/multer": "1.4.4",
     "@types/node": "13.11.1",
     "@typescript-eslint/eslint-plugin": "2.27.0",
     "@typescript-eslint/parser": "2.27.0",
@@ -57,10 +58,12 @@
     "typescript-eslint-parser": "22.0.0"
   },
   "scripts": {
-    "start": "ts-node -r tsconfig-paths/register src/index.ts",
+    "start": "ts-node --files --transpile-only -r tsconfig-paths/register src/index.ts",
+    "start:build": "node -r ./tsconfig-paths-bootstrap.js dist/index.js",
     "dev": "ts-node-dev --transpileOnly -r tsconfig-paths/register src/index.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "env": "node env"
+    "env": "node env",
+    "build": "tsc"
   },
   "engines": {
     "node": "14.8.x",
