--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "eslint-config-airbnb-typescript": "7.2.1",
     "eslint-plugin-eslint-comments": "3.1.2",
     "eslint-plugin-import": "2.20.2",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "tsconfig-paths": "^3.9.0",
+    "ts-node-dev": "1.0.0-pre.44",
+    "tsconfig-paths": "3.9.0",
     "typescript": "3.8.3",
     "typescript-eslint-parser": "22.0.0"
   },
