--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,30 +1,18 @@
 {
-  "name": "root",
+  "name": "@sergiogc9/nodejs-server",
   "version": "0.0.0",
-  "description": "NodeJS Server & Libs",
-  "private": true,
+  "description": "NodeJS Typescript Server",
   "author": "Sergio Gómez Cosgaya (sergiogcosgaya@gmail.com)",
-  "workspaces": [
-    "packages/*"
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
   ],
   "scripts": {
-    "start-old": "ts-node --files --transpile-only -r tsconfig-paths/register src/index.ts",
-    "start:build-old": "node -r ./tsconfig-paths-bootstrap.js dist/index.js",
-    "dev-old": "ts-node-dev --transpileOnly -r tsconfig-paths/register src/index.ts",
-    "lint-old": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "env-old": "node env",
-    "build-old": "tsc",
-    "start": "lerna run watch --parallel & yarn workspace @cornerjob/docs start",
-    "link:all": "lerna exec --parallel yarn link",
-    "unlink:all": "lerna exec --parallel --bail=false yarn unlink",
-    "prepare": "lerna run prepare",
-    "bootstrap": "lerna bootstrap",
-    "version:change": "lerna version",
-    "publish": "lerna publish from-git"
+    "prepare": "rollup -c ./rollup.config.js",
+    "watch": "rollup -w -c ./rollup.config.js"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "3.1.1",
-    "@rollup/plugin-typescript": "8.1.0",
     "@types/compression": "1.7.0",
     "@types/cors": "2.8.6",
     "@types/express": "4.17.6",
@@ -41,12 +29,9 @@
     "eslint-config-airbnb-typescript": "7.2.1",
     "eslint-plugin-eslint-comments": "3.1.2",
     "eslint-plugin-import": "2.20.2",
-    "lerna": "3.22.1",
-    "rollup": "2.35.1",
-    "rollup-plugin-dts": "2.0.1",
     "ts-node-dev": "1.0.0-pre.44",
     "tsconfig-paths": "3.9.0",
-    "typescript": "4.1.3",
+    "typescript": "3.8.3",
     "typescript-eslint-parser": "22.0.0"
   },
   "dependencies": {
