Fix eslint errors

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,8 +15,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  # This workflow contains a single job called "pipeline"
+  pipeline:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -41,3 +41,7 @@ jobs:
         run: yarn install
       - name: Check lint
         run: yarn lint
+      - name: Build
+        run: yarn bootstrap
+      - name: Publish
+        run: echo "Not implemented"
