--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
 engine-strict=true
+
+registry=https://registry.npmjs.org
+@sergiogc9:registry=https://npm.pkg.github.com/sergiogc9
+always-auth=true
