--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "NodeJS Server & Libs",
   "private": true,
+  "repository": "git://github.com/sergiogc9/nodejs-server.git",
   "author": "Sergio Gómez Cosgaya (sergiogcosgaya@gmail.com)",
   "workspaces": [
     "packages/*"
