--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "unlink:all": "lerna exec --parallel --bail=false yarn unlink",
     "prepare": "lerna run prepare",
     "bootstrap": "lerna bootstrap",
-    "version:change": "lerna version --no-push",
+    "version:change": "lerna version",
     "publish": "lerna publish from-git"
   },
   "devDependencies": {
