Fix github registry

--- a/.yarnrc
+++ b/.yarnrc
@@ -1,2 +1,2 @@
 registry "https://registry.npmjs.org"
-"@sergiogc9:registry" "https://npm.pkg.github.com/sergiogc9"
+"@sergiogc9:registry" "https://npm.pkg.github.com"
