--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
 engine-strict=true
 
 registry=https://registry.npmjs.org
-@sergiogc9:registry=https://npm.pkg.github.com/sergiogc9
+@sergiogc9:registry=https://npm.pkg.github.com
 always-auth=true
