--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
     "prepare": "lerna run prepare",
     "bootstrap": "lerna bootstrap",
     "version:change": "lerna version",
-    "publish": "lerna publish from-git"
+    "publish": "lerna publish from-package"
   },
+  "dependencies": {},
   "devDependencies": {
-    "@rollup/plugin-alias": "3.1.1",
-    "@rollup/plugin-typescript": "8.1.0",
-    "@types/node": "14.14.16",
     "@typescript-eslint/eslint-plugin": "4.11.1",
     "@typescript-eslint/parser": "4.11.1",
     "eslint": "7.16.0",
@@ -30,14 +28,9 @@
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.22.1",
     "lerna": "3.22.1",
-    "rollup": "2.35.1",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-dts": "2.0.1",
     "ts-node-dev": "1.1.1",
-    "typescript": "4.1.3",
-    "typescript-eslint-parser": "22.0.0"
+    "typescript": "4.1.3"
   },
-  "dependencies": {},
   "engines": {
     "node": "14.15.x",
     "npm": ">=6.14.0"
