--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@sergiogc9/nodejs-server",
+  "name": "@sergiogc9/nodejs-utils",
   "version": "0.0.1-alpha.3",
-  "description": "NodeJS Typescript Server",
+  "description": "NodeJS TypeScript utils",
   "author": "Sergio Gómez Cosgaya (sergiogcosgaya@gmail.com)",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -17,30 +17,20 @@
     "watch": "rollup -w -c ./rollup.config.js"
   },
   "dependencies": {
-    "body-parser": "1.19.0",
-    "compression": "1.7.4",
-    "cors": "2.8.5",
-    "ejs": "3.1.5",
     "express": "4.17.1",
-    "express-http-proxy": "1.6.2",
-    "express-openapi-validator": "4.10.1",
-    "helmet": "4.3.1",
-    "js-yaml": "3.14.1",
-    "json-refs": "3.0.15",
     "lodash": "4.17.20",
-    "mongoose": "5.11.13",
-    "swagger-ui-express": "4.1.6"
+    "luxon": "1.25.0",
+    "memory-cache": "0.2.0",
+    "mongoose": "5.11.13"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "3.1.1",
     "@rollup/plugin-typescript": "8.1.0",
-    "@types/compression": "1.7.0",
-    "@types/cors": "2.8.9",
-    "@types/express-http-proxy": "1.6.1",
-    "@types/js-yaml": "3.12.5",
     "@types/lodash": "4.14.166",
-    "@types/swagger-ui-express": "4.1.2",
+    "@types/luxon": "1.25.0",
+    "@types/memory-cache": "0.2.1",
     "rollup": "2.35.1",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-dts": "2.0.1",
     "rollup-plugin-terser": "7.0.2"
   },
