--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,7 +6,22 @@
   "repository": "git://github.com/sergiogc9/nodejs-server.git",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
+  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": "./dist/cjs/index.js",
+    "./Api": "./dist/cjs/Api.js",
+    "./Cache": "./dist/cjs/Cache.js",
+    "./Log": "./dist/cjs/Log.js",
+    "./Model": "./dist/cjs/Model.js"
+  },
+  "typesVersions": {
+    "*": {
+      "Api": ["dist/types/Api"],
+      "Cache": ["dist/types/Cache"],
+      "Log": ["dist/types/Log"],
+      "Model": ["dist/types/Model"]
+    }
+  },
   "files": [
     "dist"
   ],
