--- a/package.json
+++ b/package.json
@@ -1,38 +1,54 @@
 {
-  "name": "root",
-  "version": "0.0.0",
-  "description": "NodeJS Server & Libs",
-  "private": true,
-  "repository": "git://github.com/sergiogc9/nodejs-server.git",
-  "author": "Sergio Gómez Cosgaya (sergiogcosgaya@gmail.com)",
-  "workspaces": [
-    "packages/*"
-  ],
-  "scripts": {
-    "start": "ts-node --files --transpile-only examples/index.ts",
-    "dev": "lerna run watch --parallel & ts-node-dev --poll --transpile-only examples/index.ts",
-    "lint": "eslint packages/",
-    "link:all": "lerna exec --parallel yarn link",
-    "unlink:all": "lerna exec --parallel --bail=false yarn unlink",
-    "prepare": "lerna run prepare",
-    "bootstrap": "lerna bootstrap",
-    "version:change": "lerna version",
-    "publish": "lerna publish from-package"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "4.11.1",
-    "@typescript-eslint/parser": "4.11.1",
-    "eslint": "7.16.0",
-    "eslint-config-airbnb-typescript": "12.0.0",
-    "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "lerna": "3.22.1",
-    "ts-node-dev": "1.1.1",
-    "typescript": "4.1.3"
-  },
-  "engines": {
-    "node": "14.15.x",
-    "npm": ">=6.14.0"
-  }
+	"name": "root",
+	"version": "0.0.0",
+	"description": "NodeJS Server & Libs",
+	"private": true,
+	"repository": "git://github.com/sergiogc9/nodejs-server.git",
+	"author": "Sergio Gómez Cosgaya (sergiogcosgaya@gmail.com)",
+	"workspaces": [
+		"packages/*"
+	],
+	"scripts": {
+		"start": "ts-node --files --transpile-only examples/index.ts",
+		"dev": "lerna run watch --parallel & ts-node-dev --poll --transpile-only examples/index.ts",
+		"lint": "eslint packages/",
+		"link:all": "lerna exec --parallel yarn link",
+		"unlink:all": "lerna exec --parallel --bail=false yarn unlink",
+		"prepare": "lerna run prepare",
+		"bootstrap": "lerna bootstrap",
+		"version:change": "lerna version",
+		"publish": "lerna publish from-package",
+		"prettier": "prettier --write . --ignore-path .gitignore",
+		"prettier:check": "prettier --check . --ignore-path .gitignore"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "yarn prettier:check && yarn lint"
+		}
+	},
+	"dependencies": {},
+	"devDependencies": {
+		"@sergiogc9/eslint-config": "^1.0.2",
+		"@typescript-eslint/eslint-plugin": "4.15.0",
+		"eslint": "7.19.0",
+		"eslint-config-prettier": "7.2.0",
+		"eslint-plugin-eslint-comments": "3.2.0",
+		"eslint-plugin-import": "2.22.1",
+		"eslint-plugin-jest": "24.1.3",
+		"eslint-plugin-jsx-a11y": "6.4.1",
+		"eslint-plugin-prettier": "3.3.1",
+		"eslint-plugin-react": "7.22.0",
+		"eslint-plugin-react-hooks": "4.2.0",
+		"fox-awesome-cli": "1.1.0",
+		"husky": "4.3.8",
+		"jest": "26.6.3",
+		"lerna": "3.22.1",
+		"prettier": "2.2.1",
+		"ts-node-dev": "1.1.1",
+		"typescript": "4.1.3"
+	},
+	"engines": {
+		"node": "14.15.x",
+		"npm": ">=6.14.0"
+	}
 }
