Code formatted using prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,6 @@
 {
 	"root": true,
-	"extends": [
-		"@sergiogc9/eslint-config"
-	],
+	"extends": ["@sergiogc9/eslint-config"],
 	"parserOptions": {
 		"project": "./tsconfig.json"
 	}
