--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -3,11 +3,6 @@
 	"compilerOptions": {
 		"baseUrl": "."
 	},
-	"include": [
-		"src/**/*"
-	],
-	"exclude": [
-		"node_modules",
-		"**/__tests__/*"
-	]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "**/__tests__/*"]
 }
