--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
-		"@sergiogc9/eslint-config": "^1.0.2",
+		"@sergiogc9/eslint-config": "1.0.3",
 		"@typescript-eslint/eslint-plugin": "4.15.0",
 		"eslint": "7.19.0",
 		"eslint-config-prettier": "7.2.0",
