--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@sergiogc9/nodejs-utils",
-	"version": "0.0.1-alpha.7",
+	"version": "0.0.1",
 	"description": "NodeJS TypeScript utils",
 	"author": "Sergio Gómez Cosgaya (sergiogcosgaya@gmail.com)",
 	"repository": "git://github.com/sergiogc9/nodejs-server.git",
