--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,8 +51,8 @@ jobs:
             ${{ runner.os }}-
       - name: Install dependencies
         run: yarn install --ignore-scripts --frozen-lockfile
-      - name: Check lint
-        run: yarn lint
+      - name: Quality code check
+        run: yarn prettier:check && yarn lint && yarn typescript:check
       - name: Build
         run: yarn bootstrap
       - name: Publish to Github
