--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,6 +18,7 @@
 		"watch": "rollup -w -c ./rollup.config.js"
 	},
 	"dependencies": {
+		"@sergiogc9/nodejs-utils": "^0.2.2",
 		"body-parser": "1.19.0",
 		"compression": "1.7.4",
 		"cors": "2.8.5",
