--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
 	],
 	"scripts": {
 		"start": "ts-node --files --transpile-only examples/index.ts",
-		"dev": "lerna run watch --parallel & ts-node-dev --poll --transpile-only examples/index.ts",
+		"dev": "ts-node-dev --poll --transpile-only examples/index.ts",
+		"build": "FORCE_COLOR=true lerna run build --stream",
+		"watch": "FORCE_COLOR=true lerna exec --parallel yarn watch",
 		"lint": "eslint packages/",
 		"link:all": "lerna exec --parallel yarn link",
 		"unlink:all": "lerna exec --parallel --bail=false yarn unlink",
-		"prepare": "lerna run prepare",
+		"prepare": "husky install",
 		"bootstrap": "lerna bootstrap",
 		"version:change": "lerna version",
 		"publish": "lerna publish from-package",
@@ -22,32 +24,27 @@
 		"prettier:check": "prettier --check . --ignore-path .gitignore",
 		"typescript:check": "lerna exec --parallel \"tsc --noEmit -p .\""
 	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "yarn prettier:check && yarn lint && yarn typescript:check"
-		}
-	},
 	"dependencies": {},
 	"devDependencies": {
-		"@sergiogc9/eslint-config": "1.0.3",
-		"@typescript-eslint/eslint-plugin": "4.15.0",
-		"eslint": "7.19.0",
-		"eslint-config-prettier": "7.2.0",
-		"eslint-plugin-eslint-comments": "3.2.0",
-		"eslint-plugin-import": "2.22.1",
-		"eslint-plugin-jest": "24.1.3",
-		"eslint-plugin-jsx-a11y": "6.4.1",
-		"eslint-plugin-prettier": "3.3.1",
-		"fox-awesome-cli": "1.1.0",
-		"husky": "4.3.8",
-		"jest": "26.6.3",
-		"lerna": "3.22.1",
-		"prettier": "2.2.1",
-		"ts-node-dev": "1.1.1",
-		"typescript": "4.1.3"
+		"@sergiogc9/eslint-config": "^1.0.10",
+		"@sergiogc9/js-bundle": "^1.2.0",
+		"@typescript-eslint/eslint-plugin": "^4.33.0",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^7.2.0",
+		"eslint-plugin-eslint-comments": "^3.2.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jest": "^24.7.0",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-prettier": "^3.4.1",
+		"fox-awesome-cli": "^1.1.2",
+		"husky": "^8.0.0",
+		"lerna": "^5.1.4",
+		"prettier": "^2.7.1",
+		"ts-node-dev": "^2.0.0",
+		"typescript": "4.1.6"
 	},
 	"engines": {
-		"node": ">=14.x.x",
-		"npm": ">=6.14.0"
+		"node": ">=16.x.x",
+		"npm": ">=8.0.0"
 	}
 }
