--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,9 +4,17 @@
 	"description": "NodeJS Typescript Server",
 	"author": "Sergio Gómez Cosgaya (sergiogcosgaya@gmail.com)",
 	"repository": "git://github.com/sergiogc9/nodejs-server.git",
+	"keywords": [
+		"nodejs",
+		"server"
+	],
 	"main": "dist/cjs/index.js",
 	"module": "dist/esm/index.js",
 	"types": "dist/types/index.d.ts",
+	"exports": {
+		"require": "./dist/cjs/index.js",
+		"import": "./dist/esm/index.js"
+	},
 	"files": [
 		"dist"
 	],
@@ -14,40 +22,35 @@
 		"access": "public"
 	},
 	"scripts": {
-		"prepare": "rollup -c ./rollup.config.js",
-		"watch": "rollup -w -c ./rollup.config.js"
+		"build": "yarn js-bundle build --platform=node",
+		"watch": "yarn build --watch"
 	},
 	"dependencies": {
 		"@sergiogc9/nodejs-utils": "^0.2.2",
-		"body-parser": "1.19.0",
-		"compression": "1.7.4",
-		"cors": "2.8.5",
-		"ejs": "3.1.5",
-		"express": "4.17.1",
-		"express-http-proxy": "1.6.2",
+		"body-parser": "^1.20.0",
+		"compression": "^1.7.4",
+		"cors": "^2.8.5",
+		"ejs": "^3.1.8",
+		"express": "^4.17.1",
+		"express-http-proxy": "^1.6.3",
 		"express-openapi-validator": "4.10.1",
-		"helmet": "4.3.1",
-		"js-yaml": "3.14.1",
-		"json-refs": "3.0.15",
-		"lodash": "4.17.21",
+		"helmet": "^4.6.0",
+		"js-yaml": "^3.14.1",
+		"json-refs": "^3.0.15",
+		"lodash": "^4.17.21",
 		"mongoose": "5.11.13",
-		"swagger-ui-express": "4.1.6"
+		"swagger-ui-express": "^4.4.0"
 	},
 	"devDependencies": {
-		"@rollup/plugin-alias": "3.1.1",
-		"@rollup/plugin-typescript": "8.1.0",
-		"@types/compression": "1.7.0",
-		"@types/cors": "2.8.9",
-		"@types/express-http-proxy": "1.6.1",
-		"@types/js-yaml": "3.12.5",
-		"@types/lodash": "4.14.166",
-		"@types/swagger-ui-express": "4.1.2",
-		"rollup": "2.35.1",
-		"rollup-plugin-dts": "2.0.1",
-		"rollup-plugin-terser": "7.0.2"
+		"@types/compression": "^1.7.2",
+		"@types/cors": "^2.8.12",
+		"@types/express-http-proxy": "^1.6.3",
+		"@types/js-yaml": "^3.12.7",
+		"@types/lodash": "^4.14.182",
+		"@types/swagger-ui-express": "^4.1.3"
 	},
 	"engines": {
-		"node": ">=14.x.x",
-		"npm": ">=6.14.0"
+		"node": ">=16.x.x",
+		"npm": ">=8.0.0"
 	}
 }
