--- a/package.json
+++ b/package.json
@@ -44,9 +44,13 @@
 		"fox-awesome-cli": "^1.1.2",
 		"husky": "^8.0.0",
 		"lerna": "^5.1.4",
+		"lint-staged": "^13.0.2",
 		"prettier": "^2.7.1",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "4.1.6"
+	},
+	"lint-staged": {
+		"*.{js,ts,tsx,css,json,md}": "prettier --write"
 	},
 	"engines": {
 		"node": ">=16.x.x",
