--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
-	"version": "0.2.2",
+	"version": "0.2.3",
 	"useWorkspaces": true,
 	"npmClient": "yarn",
-	"packages": [
-		"packages/*"
-	]
+	"packages": ["packages/*"]
 }
