--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
+		"strict": true,
 		"baseUrl": ".",
 		"paths": {
 			"src/*": ["./src/*"]
