--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@sergiogc9/nodejs-server",
-	"version": "1.0.1-alpha.0",
+	"version": "1.0.1",
 	"description": "NodeJS Typescript Server",
 	"author": "Sergio Gómez Cosgaya (sergiogcosgaya@gmail.com)",
 	"repository": "git://github.com/sergiogc9/nodejs-server.git",
@@ -26,7 +26,7 @@
 		"watch": "yarn build --watch"
 	},
 	"dependencies": {
-		"@sergiogc9/nodejs-utils": "^1.0.1-alpha.0",
+		"@sergiogc9/nodejs-utils": "^1.0.1",
 		"body-parser": "^1.20.0",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
