--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -72,6 +72,7 @@
 	},
 	"dependencies": {
 		"express": "^4.18.1",
+		"express-basic-auth": "^1.2.1",
 		"lodash": "^4.17.21",
 		"luxon": "^1.28.0",
 		"memory-cache": "0.2.0",
