feat: Use SHA512 hashed passwords when using HTTP authentication middleware

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -73,6 +73,7 @@
 	"dependencies": {
 		"express": "^4.18.1",
 		"express-basic-auth": "^1.2.1",
+		"js-sha512": "0.8.0",
 		"lodash": "^4.17.21",
 		"luxon": "^1.28.0",
 		"memory-cache": "0.2.0",
