--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,5 @@ dist
 
 # This is really not ignored. This line has been added to avoid issues with prettier when publishing and pushing a version.
 lerna.json
+
+letsencrypt
