--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,7 @@
 		"watch": "yarn build --watch"
 	},
 	"dependencies": {
+		"@moebius/http-graceful-shutdown": "^1.1.0",
 		"@sergiogc9/nodejs-utils": "^1.0.1",
 		"body-parser": "^1.20.0",
 		"compression": "^1.7.4",
@@ -39,6 +40,7 @@
 		"json-refs": "^3.0.15",
 		"lodash": "^4.17.21",
 		"mongoose": "7.3.3",
+		"pem": "^1.14.8",
 		"swagger-ui-express": "^4.4.0"
 	},
 	"devDependencies": {
@@ -47,6 +49,7 @@
 		"@types/express-http-proxy": "^1.6.3",
 		"@types/js-yaml": "^3.12.7",
 		"@types/lodash": "^4.14.182",
+		"@types/pem": "^1.14.0",
 		"@types/swagger-ui-express": "^4.1.3"
 	},
 	"engines": {
