--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -79,6 +79,7 @@
 		"watch": "yarn build --watch"
 	},
 	"dependencies": {
+		"chalk": "^4.1.2",
 		"express": "^4.18.1",
 		"express-basic-auth": "^1.2.1",
 		"js-sha512": "0.8.0",
