--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -41,6 +41,7 @@
 		"lodash": "^4.17.21",
 		"mongoose": "7.3.3",
 		"pem": "^1.14.8",
+		"serve-index": "^1.9.1",
 		"swagger-ui-express": "^4.4.0"
 	},
 	"devDependencies": {
@@ -50,6 +51,7 @@
 		"@types/js-yaml": "^3.12.7",
 		"@types/lodash": "^4.14.182",
 		"@types/pem": "^1.14.0",
+		"@types/serve-index": "1.9.1",
 		"@types/swagger-ui-express": "^4.1.3"
 	},
 	"engines": {
